# llama.cpp

./: .gitignore  CMakeLists.txt  Makefile
examples/: CMakeLists.txt  common.cpp  common.h  gpt4all.sh
examples/embedding/: embedding.cpp
examples/main/: CMakeLists.txt  main.cpp  server.c  server.h
